--- a/components/common/footer/Footer.module.scss
+++ b/components/common/footer/Footer.module.scss
@@ -168,9 +168,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     @media (max-width: 1130px) {
       flex-direction: column;
+      gap: 8px;
     }
   }
 
