--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -5,14 +5,16 @@
   &_item {
     display: flex;
     justify-content: space-between;
-    margin-top: 40px;
+    margin-top: 30px;
     transition: all 0.3s;
     background-color: transparent;
     row-gap: 10px;
     box-shadow: 0 0 35px rgb(126 126 126 / 16%);
     border-radius: 10px;
     overflow: hidden;
-
+    @include phoneScreen {
+      margin-top: 20px;
+    }
     &:last-child {
       margin-bottom: 60px;
     }
@@ -502,9 +504,12 @@
 .news {
   &__active {
     position: relative;
-
+    margin: 0 0 130px 0;
+    @include phoneScreen {
+      margin-bottom: 80px;
+    }
     img {
-      margin-top: 60px;
+      margin-top: 40px;
       @include phoneScreen {
         margin-top: 30px;
       }
@@ -519,7 +524,6 @@
       gap: 10px;
       padding: 5px 10px;
       color: color(white);
-
       svg {
         path {
           fill: color(white);
@@ -531,7 +535,6 @@
 
     &__title {
       margin-top: 30px;
-
       h1 {
         border-left: 3px solid color(green);
         padding-left: 15px;
@@ -553,15 +556,17 @@
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
-        line-height: 160%;
-        letter-spacing: 0.025em;
+        line-height: 145%;
         color: color(text);
         margin-bottom: 15px;
+        @include phoneScreen {
+          margin-bottom: 10px;
+        }
       }
     }
 
     &__keyword {
-      padding-top: 50px;
+      padding-top: 30px;
       width: 60%;
       @include phoneScreen {
         width: 100%;
@@ -588,7 +593,7 @@
       &__paragraph {
         display: flex;
         flex-direction: column;
-        row-gap: 20px;
+        row-gap: 5px;
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
@@ -604,7 +609,6 @@
         }
     a {
       width: fit-content;
-
       span {
         padding-bottom: 5px;
         border-bottom: 1px solid color(dark);
@@ -637,15 +641,16 @@
       letter-spacing: 0.025em;
       color: color(green);
       margin-bottom: 8px;
-      margin-top: 68px;
+      margin-top: 40px;
       display: flex;
       text-align: left;
       width: 60%;
       @include phoneScreen {
+        border-left: 2px solid color(green);
         width: 100%;
         line-height: 125%;
         font-size: 20px;
-        margin: 30px 0 0 0;
+        margin: 10px 0 20px 0;
       }
     }
 
@@ -653,10 +658,7 @@
       font-style: normal;
       font-weight: 400;
       font-size: 16px;
-      line-height: 160%;
-      text-align: left;
-      letter-spacing: 0.025em;
-      margin: 30px 0;
+      line-height: 150%;
       color: color(dark);
       @include phoneScreen {
         margin: 10px 0 0 0;
@@ -671,26 +673,26 @@
 }
 
 .add_button {
-display: flex;
-justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .gallery {
-display: flex;
-justify-content: center;
-
-ul {
-display: grid;
-width: 100%;
-grid-template-columns: 1fr 1fr 1fr;
-flex-direction: row;
-justify-content: center;
-gap: 20px;
-
-img {
-  width: 100%;
-  margin: 0;
-  border-radius: 20px;
-}
-}
+  margin-top: 40px;
+  ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 12px;
+    @include ipadScreen {
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+    @include phoneScreen {
+      gap: 8px;
+    }
+    img {
+      width: 100%;
+      margin: 0;
+      border-radius: 10px;
+    }
+  }
 }
