--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -10,12 +10,13 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
   gap: 20px;
-  margin: 50px 0 130px 0;
+  margin: 30px 0 130px 0;
   @include ipadScreen {
-    margin: 50px 0 80px 0;
+    margin: 30px 0 80px 0;
   }
   @include phoneScreen {
     margin-bottom: 50px;
+    gap: 10px;
   }
   @media (max-width: 500px) {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -106,7 +107,7 @@ display: contents;
           transform: scale(1.1);
         }
       }
-      @include phoneScreen {
+      @include ipadScreen {
         margin: 0 auto;
         max-width: 300px;
       }
@@ -135,7 +136,7 @@ display: contents;
       margin-bottom: 8px;
       color: color(dark);
       margin-top: 10px;
-      @include phoneScreen {
+      @include ipadScreen  {
         font-size: 18px;
         line-height: 130%;
         max-width: 100%;
@@ -152,7 +153,7 @@ display: contents;
       align-items: center;
       gap: 10px;
       margin-bottom: 20px;
-      @include phoneScreen {
+      @include ipadScreen {
         font-size: 16px;
         line-height: 122%;
         justify-content: center;
@@ -177,10 +178,10 @@ display: contents;
       fill: #fff;
     }
   }
-  @include phoneScreen {
+  @include ipadScreen  {
     margin: 0 auto;
   }
-  button{
+  button {
     display: flex;
     align-items: center;
     gap: 12px;
@@ -199,6 +200,9 @@ display: contents;
   cursor: not-allowed;
   border-radius: 10px;
   width: 220px;
+  @include ipadScreen  {
+    margin: 0 auto;
+  }
   button {
     display: flex;
     align-items: center;
