--- a/features/news/action/FormNews.module.scss
+++ b/features/news/action/FormNews.module.scss
@@ -77,5 +77,31 @@
     display: flex;
     justify-content: center;
   }
+  
+  //todo
+  .add_input {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+  }
+  .input_list_block {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  .input_list {
+    display: flex;
+    gap: 5px;
+    margin-bottom: 10px;
+    button {
+      width: 50px !important;
+    }
+  }
+  .input_div {
+    width: 100%;
+  }
+  .input_list_input {;
+    width: 100% !important;
+  }
 }
 
