--- a/components/button/Button.module.scss
+++ b/components/button/Button.module.scss
@@ -23,7 +23,7 @@
   height: 42px;
   background: #009247;
   border-radius: 5px;
-  transition: all 0.3s;
+  transition: all 0.3s ease;
   color: #FFF;
   &:hover {
     background-color: #096709;
@@ -36,14 +36,14 @@
   justify-content: center;
   align-items: center;
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 136.5%;
-  letter-spacing: 0.08em;
+  letter-spacing: 0.05em;
   border: 2px solid #fff;
   color: #FFF;
   text-shadow: 4px 3px 6px rgb(0 0 0 / 31%);
   border-radius: 10px;
-  transition: all 0.3s ease-in;
+  transition: all 0.3s ease;
   @media (max-width: 1100px) {
     padding: 15px 50px;
     width: 250px;
@@ -163,7 +163,7 @@
     svg{
       width: 22px;
       height: 22px;
-      transition: all 0.3s;
+      transition: all 0.3s ease;
 
       path{
         fill: white;
@@ -267,7 +267,7 @@
     }
 
     svg {
-      transition: all 0.3s;
+      transition: all 0.3s ease;
     }
 
     &:hover svg {
