--- a/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
+++ b/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
@@ -1693,7 +1693,9 @@
     align-items: baseline;
     gap: 20px;
     margin-bottom: 25px;
-
+    @include phoneScreen {
+      flex-direction: column;
+    }
   }
 }
 
@@ -1707,12 +1709,19 @@
     align-items: baseline;
     gap: 20px;
     margin-bottom: 25px;
+    @include phoneScreen {
+      gap: 5px;
+      margin-bottom: 10px;
+    }
   }
   &_radios {
     display: flex;
     justify-content: center;
     gap: 20px;
     padding: 10px;
+    @include phoneScreen {
+      gap: 5px;
+    }
   }
   .border_title {
     border-top: 1px solid #bebebe;
@@ -1729,12 +1738,20 @@
     align-items: baseline;
     gap: 20px;
     margin-bottom: 25px;
+    @include phoneScreen {
+      flex-direction: column;
+      gap: 5px;
+    }
   }
   &_radios {
     display: flex;
     justify-content: center;
     gap: 20px;
     padding: 10px;
+    @include phoneScreen {
+      flex-direction: column;
+      gap: 5px;
+    }
   }
   .border_title {
     border-top: 1px solid #bebebe;
@@ -1754,6 +1771,10 @@
     align-items: baseline;
     gap: 20px;
     margin-bottom: 12px;
+    @include phoneScreen {
+      flex-direction: column;
+      gap: 10px;
+    }
   }
   .border_title {
     border-top: 1px solid #bebebe;
@@ -1771,5 +1792,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    @include phoneScreen {
+      gap: 12px;
+    }
   }
 }
