--- a/features/news/action/FormNews.module.scss
+++ b/features/news/action/FormNews.module.scss
@@ -37,7 +37,7 @@
       }
     }
   }
-  &_todo_container {
+  &_container {
     margin-bottom: 50px;
     .input_block {
       margin-bottom: 12px;
