--- a/components/textarea/Textarea.module.scss
+++ b/components/textarea/Textarea.module.scss
@@ -14,7 +14,7 @@
     border-color: rgb(207, 207, 207);
     box-sizing: border-box;
     &::placeholder {
-      color: rgb(0, 0, 0);
+      font-size: 14px;
     }
   }
 }
