--- a/components/accordeon/Accordion.module.scss
+++ b/components/accordeon/Accordion.module.scss
@@ -83,6 +83,10 @@
   user-select: none;
     span{
       padding: 16px 15px;
+      font-size: 18px;
+      width: 100%;
+      letter-spacing: 0;
+      line-height: 145%;
     }
 }
 
