--- a/components/common/header/headerIcon/HeaderIcon.module.scss
+++ b/components/common/header/headerIcon/HeaderIcon.module.scss
@@ -33,8 +33,8 @@
     display: flex;
     .phone__container {
       position: absolute;
-      width: 161px;
-      right: 0;
+      width: 162px;
+      right: -3px;
       bottom: -30px;
     }
     .phone__block {
