--- a/components/title_tabs/TitleTabs.module.scss
+++ b/components/title_tabs/TitleTabs.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import 'styles/mixins.scss';
+@import 'styles/variables.scss';
 
 .interaction_container {
   max-width: 600px;
