--- a/features/decision/Decision.module.scss
+++ b/features/decision/Decision.module.scss
@@ -31,6 +31,7 @@
       overflow: hidden;
       top: 0;
       box-sizing: border-box;
+      padding: 10px;
       &_title {
         color: color(white);
         font-weight: 500;
@@ -48,7 +49,7 @@
       &_description {
         font-weight: 400;
         font-size: 16px;
-        line-height: 135%;
+        line-height: 145%;
         color: color(white);
         padding: 10px 20px 3px 20px;
         display: -webkit-box;
