--- a/features/decision/DecisionPage/DecisionPage.module.scss
+++ b/features/decision/DecisionPage/DecisionPage.module.scss
@@ -16,7 +16,7 @@
   display: flex;
   gap: 20px;
   align-items: flex-start;
-  padding: 60px 10px 0 10px;
+  padding: 20px 10px 0 10px;
   @media (max-width: 1200px) {
     flex-direction: column;
   }
@@ -40,23 +40,26 @@
     object-fit: cover;
   }
 
-  &_info{
-    h1{
+  &_info {
+    h1 {
       margin-bottom: 10px;
       line-height: 50px;
       font-size: 38px;
       font-weight: 500;
+      color: color(dark);
       @include phoneScreen {
-        font-size: 30px;
-        line-height: 145%;
+        font-size: 22px;
+        line-height: 122%;
+        margin-bottom: 5px;
+        font-weight: 400;
       }
     }
 
-    p{
+    p {
       font-weight: normal;
       font-size: 16px;
       line-height: 150%;
-      color: #212121;
+      color: color(dark);
     }
   }
 }
