--- a/features/home/news/News.module.scss
+++ b/features/home/news/News.module.scss
@@ -126,8 +126,9 @@
           color: color(white);
           margin-bottom: 10px;
           @include phoneScreen {
-            font-size: 22px;
-            font-weight: 500;
+            font-size: 20px;
+            line-height: 145%;
+            font-weight: 400;
             margin-bottom: 0;
           }
         }
