--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -109,9 +109,9 @@
       padding: 10px 0;
       display: flex;
       flex-direction: column;
-      @include phoneScreen {
+      @media (max-width: 1200px) {
         width: 100%;
-        padding: 20px;
+        padding: 20px 0 0 0;
       }
 
       &_title{
@@ -143,10 +143,16 @@
       gap: 10px;
       padding: 10px;
       background-color: #e9e9e9;
+      @media (max-width: 1200px) {
+        position: static;
+      }
     }
     &__item_button {
       display: flex;
       align-items: center;
+      @media (max-width: 1200px){
+        margin-bottom: 20px;
+      }
       @include phoneScreen {
         justify-content: center;
       }
