--- a/features/resources/tab_questionnaires/QuestionnairesContainer.module.scss
+++ b/features/resources/tab_questionnaires/QuestionnairesContainer.module.scss
@@ -31,26 +31,22 @@
     }
   }
   &__info {
-    width: 50%;
-    padding: 12px;
-    @include phoneScreen {
-      width: 100%;
-      padding: 12px 12px 20px 12px;
-      box-sizing: border-box;
-    }
+    width: 100%;
+    padding: 15px;
+    box-sizing: border-box;
     h3 {
-      font-size: 20px;
+      font-size: 18px;
       font-weight: 400;
-      margin: 0 0 12px 0;
+      margin: 0 0 6px 0;
       color: color(dark);
       line-height: 145%;
        @include phoneScreen {
-         font-size: 18px;
+         font-size: 16px;
          line-height: 135%;
        }
     }
     p {
-      color: color(dark);
+      color: color(gray);
       font-size: 16px;
       text-transform: lowercase;
        @include phoneScreen {
