--- a/features/equipment/Equipment.module.scss
+++ b/features/equipment/Equipment.module.scss
@@ -6,6 +6,7 @@
   grid-template-columns: 250px 1fr;
   column-gap: 50px;
   padding-top: 40px;
+  margin-bottom: 130px;
   @media (max-width: 1270px) {
     display: block;
   }
@@ -36,7 +37,6 @@
         border-bottom: 0.5px solid #b4bdb27d;
         transition: all 0.3s;
         color: white;
-
         span {
           width: 80%;
         }
@@ -65,7 +65,6 @@
       display: flex;
       align-items: center;
       line-height: 57px;
-
       svg {
         margin-right: 8px;
       }
@@ -111,9 +110,10 @@
 
     &_product {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-      gap: 20px;
-      margin-bottom: 3%;
+      grid-template-columns: repeat(auto-fit, minmax(340px, 340px));
+      grid-gap: 15px;
+      gap: 15px;
+      margin-bottom: 10%;
       @include phoneScreen {
         gap: 10px;
         display: flex;
@@ -127,7 +127,6 @@
         transition: all 0.2s;
         position: relative;
         border: 1px solid color(border_category);
-
         &:hover img {
           object-fit: contain;
           transform: scale(1.1);
