--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -13,7 +13,42 @@
   @include ipadScreen {
     flex-direction: column;
   }
-
+  .disabled_active {
+    border-radius: 10px;
+    &:hover {
+      background: color(green);
+      color: color(white);
+      path {
+        fill: #fff;
+      }
+    }
+    button{
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      transition: none !important;
+    }
+    span {
+      svg {
+        width: 18px;
+      }
+      path {
+        fill: white;
+      }
+    }
+  }
+  .disabled {
+    cursor: not-allowed;
+    border-radius: 10px;
+    button {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      background-color: grey !important;
+      cursor: not-allowed !important;
+      transition: none !important;
+    }
+  }
   h1 {
     text-align: left;
     text-transform: uppercase;
@@ -27,7 +62,6 @@
       text-align: center;
     }
   }
-
   &:focus-within {
     label {
       transform: translateY(-30px) scale(1);
@@ -76,7 +110,7 @@
     display: flex;
     align-items: flex-start;
     background-color: #f5f5f5;
-    padding: 0 18px 0 0;
+    padding: 15px;
     border-radius: 8px;
     overflow: hidden;
     border: 1px solid #F0F0EA;
@@ -96,7 +130,8 @@
       display: flex;
       align-items: baseline;
       @include phoneScreen {
-        width: 100%;
+        width: 50%;
+        padding: 20px;
       }
 
       img {
@@ -205,3 +240,18 @@
     }
   }
 }
+
+//.active {
+//  display: flex;
+//  button {
+//    background: #000 !important;
+//    &:hover {
+//      cursor: not-allowed;
+//    }
+//  }
+//}
+//.disabled {
+//  button {
+//    background: red !important;
+//  }
+//}
