--- a/styles/include/_normalize.scss
+++ b/styles/include/_normalize.scss
@@ -41,6 +41,10 @@ ul {
   .swiper .swiper-button-next, .swiper .swiper-button-prev {
     display: none !important;
   }
+  .swiper .swiper-pagination .swiper-pagination-bullet {
+    width: 12px !important;
+    height: 12px !important;
+  }
 }
 
 input,
@@ -66,6 +70,11 @@ img {
   width: 100%;
   height: 100%;
   display: block;
+  object-fit: cover;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  pointer-events: none;
 }
 
 h1,h2,h3,h4,h5 {
