--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -414,12 +414,13 @@
 
 //Форма Профиля
 .profile__form__item {
-  background: #f3f3f3;
+  background: color(white);
+  box-shadow: 0 0 15px rgb(0 0 0 / 12%);
   border-radius: 10px;
   margin: 40px auto 130px;
   padding: 50px;
   @include phoneScreen {
-    padding: 40px 30px;
+    padding: 20px;
   }
   h1 {
     font-size: 30px;
