--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -39,11 +39,8 @@
       @media (max-width: 1500px) {
         left: 6%;
       }
-      @media (max-width: 1100px) {
-        top: 16%;
-        left: 5%;
-        padding: 25px 20px;
-        border-radius: 20px;
+      @media (max-width: 1000px) {
+        display: none;
       }
 
       &_title {
