--- a/features/contacts/tab_interaction/Interaction.module.scss
+++ b/features/contacts/tab_interaction/Interaction.module.scss
@@ -53,7 +53,7 @@
 
 .interaction_items {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(290px, 330px));
   gap: 20px;
   margin: 0 0 5% 0;
   &:last-child {
@@ -66,6 +66,7 @@
     background-color: rgb(245, 245, 245);
     transition: all 0.3s;
     cursor: pointer;
+    display: grid;
     &:hover {
       box-shadow: 0 0 30px rgba(20, 20, 20, 0.2);
       transform: translateY(-2px);
@@ -81,12 +82,13 @@
       margin-bottom: 25px;
     }
 
-    p {
+    div {
       display: flex;
       justify-content: space-between;
       color: gray;
       align-items: flex-start;
       font-size: 16px;
+      width: 100%;
       a {
         color: color(green);
         font-size: 14px;
@@ -107,9 +109,22 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
-      p {
+      div {
         font-size: 15px;
       }
+    }
+  }
+  &_grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 215px));
+    gap: 20px;
+    h2 {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 125%;
+      letter-spacing: 0.025em;
+      color: color(green);
+      margin-bottom: 15px;
     }
   }
 }
