--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -126,11 +126,11 @@
         overflow: hidden;
         box-shadow: 0 0 3px rgb(0 0 0 / 25%);
         margin-bottom: 20px;
-        @include phoneScreen {
+        @include ipadScreen {
           height: 340px;
         }
         @media (max-width: 450px) {
-          height: 370px;
+          height: 100%;
         }
         img {
           transition: all 0.3s ease;
@@ -141,20 +141,19 @@
         h4 {
           font-weight: 400;
           font-size: 16px;
-          //line-height: 17px;
-          //text-align: center;
-          //color: #414141;
+          color: #414141;
           margin-bottom: 6px;
           position: relative;
-          //text-transform: unset;
           line-height: 20px;
           text-align: center;
-          color: #7C7C7C;
           display: -webkit-box;
           height: 55px;
           -webkit-line-clamp: 4;
           -webkit-box-orient: vertical;
           overflow: hidden;
+          @include phoneScreen {
+            height: 35px;
+          }
           &:after {
             content: "";
             width: 88px;
