--- a/features/contacts/tab_interaction/Interaction.module.scss
+++ b/features/contacts/tab_interaction/Interaction.module.scss
@@ -53,7 +53,7 @@
 
 .interaction_items {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(290px, 330px));
+  grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
   gap: 20px;
   margin: 0 0 5% 0;
   &:last-child {
@@ -86,9 +86,7 @@
       display: flex;
       justify-content: space-between;
       color: gray;
-      align-items: flex-start;
       font-size: 16px;
-      width: 100%;
       a {
         color: color(green);
         font-size: 14px;
@@ -114,9 +112,66 @@
       }
     }
   }
-  &_grid{
+  &_item_director {
+    display: block;
+    h3 {
+      display: -webkit-box;
+      height: 55px;
+      -webkit-line-clamp: 4;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 125%;
+      letter-spacing: 0.025em;
+      color: color(green);
+      //position: relative;
+
+      //&:after {
+      //  content: '';
+      //  position: absolute;
+      //  left: 0;
+      //  bottom: -10px;
+      //  right: 0;
+      //  height: 1px;
+      //  width: 30%;
+      //  background: color(green);
+      //}
+    }
+    .info {
+      flex-direction: column;
+      p {
+        font-size: 16px;
+        color: gray;
+        margin-bottom: 12px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        &:first-child {
+          //color: color(dark);
+          font-size: 18px;
+          margin-bottom: 12px;
+          line-height: 140%;
+        }
+        &:last-child {
+          margin-bottom: 0;
+        }
+        .svg__phone {
+          svg {
+            width: 22px;
+            height: 22px;
+            path {
+              fill: rgb(51, 149, 58);
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &_grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 215px));
+    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
     gap: 20px;
     h2 {
       font-size: 16px;
