--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -382,6 +382,7 @@
   &_banner {
     &__slider {
       &_slide {
+        display: flex;
         position: relative;
         height: 100%;
         max-width: 1280px;
@@ -414,33 +415,29 @@
           }
         }
       }
-
       &_img {
+        width: 50%;
+        overflow: hidden;
+        border-radius: 0 20px 20px 0;
         img {
-          border-radius: 20px;
           object-fit: cover;
-          height: 461px;
-          @include ipadScreen {
-            height: 350px;
-          }
-
-          @media (max-width: 450px) {
-            height: 100%;
+          height: 470px;
+          @media (max-width: 600px) {
+            height: 440px;
           }
         }
       }
     }
-
     &__right_element {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
+      //position: absolute;
+      //top: 0;
+      //left: 0;
+      //bottom: 0;
       background: rgba(123, 123, 123, 0.7);
       backdrop-filter: blur(20px);
       padding: 40px 30px;
       border-radius: 20px 0 0 20px;
-      width: 50%;
+      width: 45%;
       @include tabletScreen {
         border-radius: 20px 0 0 20px;
         padding: 10px;
@@ -481,12 +478,11 @@
         -webkit-box-orient: vertical;
         text-overflow: ellipsis;
         @include phoneScreen {
-          height: 220px;
+          height: 245px;
           line-height: 125%;
         }
       }
     }
-
     &__slide_video {
       &_video {
         position: absolute;
