--- a/components/own_object/OwnObject.module.scss
+++ b/components/own_object/OwnObject.module.scss
@@ -31,6 +31,10 @@
     @include ipadScreen {
       height: 300px;
     }
+
+    &:last-child:nth-child(2n+1) {
+      grid-column: span 2;
+    }
     
     &:hover {
       .object__slider {
@@ -48,13 +52,16 @@
       left: -130%;
       width: 100%;
       height: 100%;
-      transition: all 0.4s ease-in-out;
+      box-sizing: border-box;
+      line-height: 160%;
+      transition: all 0.4s ease;
       background: linear-gradient(227.96deg, rgba(123, 169, 0, 0.86) -21.84%, #3477008c 103.24%);
       backdrop-filter: blur(5.5px);
-      padding: 50px 40px 20px 30px;
-      @include ipadScreen {
-        padding: 20px;
+      padding: 20px;
+      @include phoneScreen {
+        line-height: 145%;
       }
+
       span {
         position: relative;
         &:after {
@@ -76,8 +83,12 @@
         }
 
         .title {
-          font-size: 25px;
+          font-size: 20px;
           margin-bottom: 8px;
+          @include phoneScreen {
+            font-size: 16px;
+            line-height: 130%;
+          }
         }
 
         .address {
@@ -86,7 +97,11 @@
 
         .sub__title {
           font-size: 18px;
-          margin-bottom: 12px; 
+          margin-bottom: 12px;
+          @include phoneScreen {
+            font-size: 16px;
+            line-height: 130%;
+          }
         }
         
         p {
