--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -429,24 +429,20 @@
       }
     }
     &__right_element {
-      //position: absolute;
-      //top: 0;
-      //left: 0;
-      //bottom: 0;
       background: rgba(123, 123, 123, 0.7);
       backdrop-filter: blur(20px);
-      padding: 40px 30px;
       border-radius: 20px 0 0 20px;
-      width: 45%;
+      width: 50%;
+      padding: 30px;
       @include tabletScreen {
-        border-radius: 20px 0 0 20px;
-        padding: 10px;
-        min-width: 200px;
+        min-width: 60%;
+        padding: 20px 10px;
+        border-radius: 10px 0 0 10px;
       }
 
-      @media (max-width: 550px) {
-        padding: 10px;
-        min-width: 80%;
+      @include phoneScreen {
+        min-width: 60%;
+        padding: 20px;
         border-radius: 10px 0 0 10px;
       }
 
@@ -459,27 +455,19 @@
         margin: 0 0 8px 0;
         color: color(white);
         @media (max-width: 1100px) {
-          font-size: 20px;
-          max-width: 490px;
+          font-size: 18px;
+          font-weight: 400;
         }
       }
 
       &_text {
         font-weight: 300;
-        font-size: 15px;
+        font-size: 16px;
         line-height: 145%;
         color: color(white);
-        max-width: 500px;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        -webkit-line-clamp: 13;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
+        margin-bottom: 20px;
         @include phoneScreen {
-          height: 245px;
-          line-height: 125%;
+          font-size: 15px;
         }
       }
     }
