--- a/features/typo_size/develop/Develop.module.scss
+++ b/features/typo_size/develop/Develop.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/mixins.scss';
 @import 'styles/variables.scss';
 
-.calculations_container {
+.develop_container {
   margin: 100px auto;
   @include phoneScreen {
     margin: 60px auto;
