--- a/features/decision/DecisionPage/DecisionPage.module.scss
+++ b/features/decision/DecisionPage/DecisionPage.module.scss
@@ -16,7 +16,7 @@
   display: flex;
   gap: 20px;
   align-items: flex-start;
-  padding: 20px 10px 0 10px;
+  padding: 50px 0;
   @media (max-width: 1200px) {
     flex-direction: column;
   }
