--- a/features/auth/SignContainer.module.scss
+++ b/features/auth/SignContainer.module.scss
@@ -14,9 +14,11 @@
     width: 100%;
   }
 }
-.text_modal{
+
+.text_modal {
   margin-bottom: 20px;
 }
+
 .authorization__form {
   max-width: 550px;
   margin: 50px auto 0;
@@ -50,22 +52,25 @@
 
   &__item__input {
     font-size: 12px;
+
     .overflow {
       margin-top: 5px;
       transition: all 0.3s;
       height: 23px;
       opacity: 0;
       transform: translateY(-10px);
+
       span {
         margin: 0 0 0 10px;
       }
     }
 
     &_error {
-      color:  color(error);
+      color: color(error);
       border-radius: 8px;
       font-size: 12px;
       position: relative;
+
       .overflow__auto {
         margin-top: 5px;
         opacity: 1;
@@ -93,9 +98,11 @@
     button {
       width: 170px;
       position: relative;
+
       li {
         list-style: none;
       }
+
       .button__spinner {
         position: absolute;
         right: 15px;
@@ -129,6 +136,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+
   .overflow__auto {
     width: 300px;
     @include ipadScreen {
@@ -141,7 +149,7 @@
     font-size: 14px;
     margin-top: 5px;
     transition: all 0.3s;
-  
+
     &:hover {
       color: color(green);
       transform: translateX(3px);
@@ -157,6 +165,7 @@
   box-shadow: 0 0 15px rgb(0 0 0 / 12%);
   border-radius: 10px;
   padding: 20px 20px;
+
   button {
     @include phoneScreen {
       width: auto;
@@ -169,6 +178,7 @@
     .overflow {
       margin-top: 0;
     }
+
     .overflow__auto {
       margin-top: 0;
     }
@@ -176,6 +186,7 @@
 
   &__items {
     overflow: hidden;
+
     &__title {
       h1 {
         font-size: 30px;
@@ -207,20 +218,25 @@
       align-items: self-start;
       gap: 20px;
     }
+
     button {
       width: 260px;
       position: relative;
+
       li {
         list-style: none;
       }
+
       .button__spinner {
         position: absolute;
         right: 15px;
+
         .Spinners_spinner__button__container__pdUp3 span {
           padding: 5px 0;
         }
       }
     }
+
     //span {
     //  font-size: 14px;
     //  font-weight: 400;
@@ -257,6 +273,7 @@
 
     ul {
       width: 100%;
+
       input {
         width: 100%;
       }
@@ -276,12 +293,30 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+
+    &.check_box {
+      display: flex;
+      flex-direction: row;
+      margin: 0;
+
+      span {
+        font-size: 14px;
+        padding-left: 10px;
+        display: flex;
+        text-decoration: underline;
+        cursor: pointer;
+        line-height: 125%;
+        margin-bottom: 30px;
+      }
+    }
+
     .overflow {
       margin-top: 5px;
       transition: all 0.3s;
       height: 23px;
       opacity: 0;
       transform: translateY(-10px);
+
       span {
         margin: 0 0 0 10px;
       }
@@ -292,12 +327,14 @@
       border-radius: 8px;
       font-size: 12px;
       width: 100%;
+
       .overflow__auto {
         margin-top: 5px;
         opacity: 1;
         transition: all 0.3s;
         transform: translateY(0px);
         height: 23px;
+
         span {
           margin: 0 0 0 10px;
         }
@@ -336,12 +373,15 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 45px;
+
   input {
     width: 100%;
   }
+
   @include phoneScreen {
     grid-template-columns: 1fr;
   }
+
   .support__form {
     display: block;
   }
@@ -355,6 +395,7 @@
   box-shadow: 0 0 15px rgb(0 0 0 / 12%);
   padding: 0 10px;
   border-radius: 10px;
+
   button {
     width: 220px;
     @include phoneScreen {
@@ -362,6 +403,7 @@
       font-size: 14px;
     }
   }
+
   h1 {
     font-size: 30px;
     margin-bottom: 20px;
@@ -371,40 +413,49 @@
       font-size: 26px;
     }
   }
+
   &__item {
     padding: 20px 10px 30px 10px;
+
     input {
       width: 100%;
     }
   }
+
   &__item__input {
     font-size: 12px;
     margin-top: 10px;
+
     .overflow {
       margin-top: 5px;
       transition: all 0.3s;
       height: 23px;
       opacity: 0;
       transform: translateY(-10px);
+
       span {
         margin: 0 0 0 10px;
       }
     }
+
     &_error {
       color: red;
       border-radius: 8px;
       font-size: 12px;
       position: relative;
+
       .overflow__auto {
         margin-top: 5px;
         opacity: 1;
         transition: all 0.3s;
         transform: translateY(0px);
         height: 23px;
+
         span {
           margin: 0 0 0 10px;
         }
       }
+
       .input__item {
         border-color: red;
       }
@@ -422,6 +473,7 @@
   @include phoneScreen {
     padding: 20px;
   }
+
   h1 {
     font-size: 30px;
     margin-bottom: 20px;
@@ -429,6 +481,7 @@
     font-weight: 400;
   }
 }
+
 .profile_box_field {
   display: grid;
   grid-template-columns: 1fr 1fr;
