--- a/components/inDevelopment/InDevelopmentContainer.module.scss
+++ b/components/inDevelopment/InDevelopmentContainer.module.scss
@@ -21,7 +21,7 @@
       width: 100%;
       font-style: normal;
       font-weight: 300;
-      font-size: 50px;
+      font-size: 40px;
       line-height: 140%;
       text-align: center;
       letter-spacing: 0.025em;
@@ -30,9 +30,11 @@
       margin-bottom: 50px;
       padding-bottom: 10px;
       border-bottom: 2px solid color(white);
-      @media (max-width: 1200px) {
+      @media (max-width: 1500px) {
         font-size: 40px;
-        border-bottom: 1px solid color(white);
+      }
+      @media (max-width: 1200px) {
+        font-size: 35px;
       }
       @include ipadScreen {
         margin-bottom: 30px;
