--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -544,38 +544,38 @@
     &__slider {
       &_slide {
         position: relative;
-        @media (max-width: 1530px) {
-          height: 600px;
-        }
-
-        @media (max-width: 1400px) {
-          height: 550px;
-        }
-
-        @media (max-width: 1240px) {
-          height: 500px;
-        }
-
-        @media (max-width: 830px) {
-          height: 420px;
-        }
-
-        @media (max-width: 610px) {
-          height: 350px;
-        }
-
-        @media (max-width: 500px) {
-          height: 280px;
-        }
-
-
-        @media (max-width: 450px) {
-          height: 240px;
-        }
-
-        @media (max-width: 400px) {
-          height: 220px;
-        }
+        //@media (max-width: 1530px) {
+        //  height: 600px;
+        //}
+        //
+        //@media (max-width: 1400px) {
+        //  height: 550px;
+        //}
+        //
+        //@media (max-width: 1240px) {
+        //  height: 500px;
+        //}
+        //
+        //@media (max-width: 830px) {
+        //  height: 420px;
+        //}
+        //
+        //@media (max-width: 610px) {
+        //  height: 350px;
+        //}
+        //
+        //@media (max-width: 500px) {
+        //  height: 280px;
+        //}
+        //
+        //
+        //@media (max-width: 450px) {
+        //  height: 240px;
+        //}
+        //
+        //@media (max-width: 400px) {
+        //  height: 220px;
+        //}
       }
 
       &_img {
