--- a/features/equipment/Equipment.module.scss
+++ b/features/equipment/Equipment.module.scss
@@ -6,12 +6,24 @@
   grid-template-columns: 270px 1fr;
   column-gap: 30px;
   padding-top: 40px;
+  margin-bottom: 100px;
   @media (max-width: 1270px) {
     display: block;
   }
-
+  .product__title {
+    font-size: 30px;
+    color: color(dark);
+    @include phoneScreen {
+      font-size: 20px;
+    }
+  }
   .content_box{
     max-width: 1140px;
+    overflow: hidden;
+    box-sizing: border-box;
+    @media (max-width: 1270px) {
+      max-width: 100%;
+    }
   }
 
   &_menu {
