--- a/features/equipment/equipmentPage/utp/Utp.module.scss
+++ b/features/equipment/equipmentPage/utp/Utp.module.scss
@@ -7,13 +7,14 @@
 
   &__top {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 50% 48%;
     align-items: center;
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 20px;
     box-sizing: border-box;
     @include ipadScreen {
+      display: flex;
       flex-direction: column;
     }
 
@@ -84,8 +85,9 @@
     }
 
     p {
-      margin-bottom: 8px;
+      margin-bottom: 10px;
       color: grey;
+      line-height: 145%;
       @include ipadScreen {
         padding: 0 0 0 12px;
       }
@@ -126,12 +128,16 @@
 }
 
 .lh {
-  line-height: 22px;
+  line-height: 145%;
+  color: color(dark);
+  b {
+    color: color(dark);
+  }
 }
 
 //Стили для окна БИМ
 .download {
-  padding: 50px;
+  padding: 50px 150px;
   @include ipadScreen {
     padding: 0;
   }
@@ -162,6 +168,9 @@
     }
     .titles {
       margin-bottom: 30px;
+      @include phoneScreen {
+        margin-bottom: 12px;
+      }
       .first__title {
         font-size: 20px;
         color: color(dark);
