--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -10,6 +10,20 @@
   }
 }
 
+.button__job {
+  a {
+    font-weight: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 168px;
+    height: 42px;
+    background: #009247;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    color: color(white);
+  }
+}
 .bottom__separator {
   margin-bottom: 0;
 }
