--- a/features/resources/tab_bim/bimModal/ModalBim.module.scss
+++ b/features/resources/tab_bim/bimModal/ModalBim.module.scss
@@ -28,9 +28,55 @@
       margin-bottom: 10px;
     }
   }
+  //Стили для кнопки СКАЧАТЬ
+  .disabled_active {
+    margin: 20px 0 12px 0;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    color: color(white) !important;
+    font-size: 16px;
+    background-color: color(green) !important;
+    padding: 7.5px 30px;
+    svg {
+      width: 18px;
+      transition: all .2s ease;
+      path {
+        fill: white !important;
+        transition: all .2s ease;
+      }
+    }
+
+    &:hover {
+      background: color(green);
+      color: color(white);
+      path {
+        fill: #fff;
+      }
+    }
+  }
+  .disabled {
+    margin: 20px 0 12px 0;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    color: color(white) !important;
+    font-size: 16px;
+    background-color: grey !important;
+    padding: 12px 29px;
+    cursor: not-allowed;
+    svg {
+      width: 18px;
+      path {
+        fill: white;
+      }
+    }
+  }
+  .error__span {
+    color: red;
+  }
 
   &__items {
-
     display: flex;
     flex-direction: column;
     gap: 50px;
@@ -46,10 +92,6 @@
 
   &__download {
     background-color: transparent;
-    button {
-      margin-top: 30px;
-    }
-
     &__items {
       display: flex;
       align-items: flex-start;
